# laliga-fantasy-data

./: .gitignore  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
docs/: handoff-scraping.md  plan.md  runbook.md
docs/adr/: 0001-canonical-player-ids-with-manual-review.md  0002-sofascore-primary-eventing-source.md  0003-s3-raw-plus-curated-layers.md  0004-scrapeops-como-desbordamiento.md  0005-transfermarkt-players-particionada-por-temporada.md  0006-la-identidad-no-tiene-temporada.md  0007-los-entrenadores-no-son-jugadores.md  0008-de-biwenger-solo-se-ingiere-la-liga.md  0009-identidad-historica-de-rounds-por-temporada.md  0010-jornadas-postponed-duplicadas.md  0011-registro-negativo-de-sofascore.md  0012-el-precio-no-va-por-el-delta.md  0013-historial-transfermarkt-carrera-completa-particion-por-procedencia.md
docs/experiments/: 2026-07-07-alex-fores.md
docs/implementation/: 01-esqueleto-e-ingesta-biwenger.md  02-mappings-y-transfermarkt.md  03-sofascore-fotmob-y-backfill.md  04-modelos.md  (+4 more)
infra/: .gitignore  README.md  budget.tf  ecr.tf  iam.tf  outputs.tf  providers.tf  s3.tf  variables.tf  versions.tf
mappings/: README.md  players-review.csv  players.csv  sofascore-review.csv  sofascore-skips.csv  sofascore-teams-review.csv  teams-review.csv  teams.csv
tests/: test_biwenger.py  test_cli.py  test_http.py  test_mappings.py  test_newcomers.py  test_orchestrator.py  test_probe.py  test_smoke.py  test_sofascore.py  test_sofascore_catalog.py  test_sofascore_cups.py  test_storage.py  test_transfermarkt.py
(+57 files in other folders)
