[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfdata"
version = "0.1.0"
description = "Datos y proyecciones para fantasy de La Liga (Biwenger primero)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lfdata = "lfdata.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lfdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
