[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfdata"
version = "0.1.0"
description = "Datos y proyecciones para fantasy de La Liga (Biwenger primero)"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.35",
    "curl-cffi>=0.13",
    "pandas>=2.2",
    "pyarrow>=18",
    "pydantic>=2.9",
]

[project.scripts]
lfdata = "lfdata.cli:main"

[dependency-groups]
dev = [
    "moto[s3]>=5.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lfdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
